Dates on Focus Opened and Quotes restricted wrt to rfq expiry date Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/po-card/po-card.component.html
+++ b/src/app/features/po/po-card/po-card.component.html
@@ -18,10 +18,10 @@
       <ng-template #editDateBlock>
         <span class="text-semi-bold">
           P.O. Valid Till:
-          <mat-form-field class="border-input date-label validTill mat-form-field-padding">
+          <mat-form-field class="border-input">
             <mat-label>Valid Till</mat-label>
-            <span class="form-placeholder">{{ projectDetails["controls"]["endDate"].value | date: "dd-MMM-yyy" }}</span>
-            <input hidden #dateinput matInput formControlName="endDate" [matDatepicker]="endDate" (focus)="endDate.open()" readonly [min]="minDate" />
+            <!-- <span class="form-placeholder">{{ projectDetails["controls"]["endDate"].value | date: "dd-MMM-yyy" }}</span> -->
+            <input #dateinput matInput formControlName="endDate" [matDatepicker]="endDate" (focus)="endDate.open()" readonly [min]="minDate" />
             <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
             <mat-datepicker #endDate startView="month"></mat-datepicker>
           </mat-form-field>
