--- a/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
+++ b/src/app/features/po/initiate-po/po-quantity-makes/po-quantity-makes.component.html
@@ -59,13 +59,13 @@
           <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
             <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
             <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field class="border-input date-label date-button mat-form-field-padding" [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)">
+              <mat-form-field class="border-input" [formGroupName]="i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)">
                 <!-- <mat-label>Fullfil </mat-label> -->
-                <span class="form-placeholder">{{
+                <!-- <span class="form-placeholder">{{
                   materialForms["controls"]["forms"]["controls"][i + (mati ? checkedMaterialsList[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
                     | date: "dd-MMM-yyy"
-                }}</span>
-                <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
+                }}</span> -->
+                <input matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
