--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -85,15 +85,15 @@
               <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
               <td mat-cell *matCellDef="let element; let i = index">
                 <mat-form-field
-                  class="border-input date-label date-button mat-form-field-padding"
+                  class="border-input "
                   [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)"
                 >
                   <!-- <mat-label>Fullfil </mat-label> -->
-                  <span class="form-placeholder">{{
+                  <!-- <span class="form-placeholder">{{
                     materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
                       | date: "dd-MMM-yyy"
-                  }}</span>
-                  <input hidden matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" [min]="minDate" readonly />
+                  }}</span> -->
+                  <input matInput [matDatepicker]="dueDate" formControlName="fullfilmentDate" (focus)="dueDate.open()" [min]="minDate" readonly />
                   <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                   <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
                 </mat-form-field>
