--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -61,11 +61,10 @@
             <th mat-header-cell *matHeaderCellDef>Required Date</th>
 
             <td mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field [formGroupName]="i" class="border-input date-label-indent">
-                <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy" }}</span>
+              <mat-form-field [formGroupName]="i" class="border-input">
+                <!-- <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy" }}</span> -->
                 <input
                   matInput
-                  hidden
                   formControlName="dueDate"
                   #ref
                   [matDatepicker]="startDate"
