--- a/src/app/features/bom/bom.component.html
+++ b/src/app/features/bom/bom.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="col-xs-3 text-right">
               <mat-form-field class="border-select p-t-0">
-                <mat-label *ngIf="!topMaterialData.length">Select Trades</mat-label>
+                <mat-label *ngIf="!form['controls']['selectedTrades'].length">Select Trades</mat-label>
                 <mat-select formControlName="selectedTrades" multiple>
                   <div class="display-flex">
                     <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Trade" [(ngModel)]="searchTrade" [ngModelOptions]="{standalone: true}" />
