--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,51 +1,46 @@
 <!-- <fix-header></fix-header> -->
 <div class="page-start-point">
-    <div *ngIf="!allProjects || (allProjects && allProjects.length==0) " class="parent min-height">
-        <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
-            <div class="add-user-img">
-                <img src="../../../../assets/images/project-background.png" alt="Project Logo">
-                <div *ngIf="permissionObj.rfqFlag">
-                    <p>
-                        You haven't added any project yet. <br> Please create one to continue.
-                    </p>
-                </div>
-                <div *ngIf="!permissionObj.rfqFlag">
-                    <p>
-                        You haven't been assigned any project yet.
-                    </p>
-                </div>
-            </div>
-
-            <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()" class="main-background-color main-button color-white">
+  <div *ngIf="!allProjects || (allProjects && allProjects.length == 0)" class="parent min-height">
+    <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+      <div class="add-user-img">
+        <img src="../../../../assets/images/project-background.png" alt="Project Logo" />
+        <div *ngIf="permissionObj.rfqFlag">
+          <p>
+            You haven't added any project yet. <br />
+            Please create one to continue.
+          </p>
+        </div>
+        <div *ngIf="!permissionObj.rfqFlag">
+          <p>
+            You haven't been assigned any project yet.
+          </p>
+        </div>
+      </div>
+      <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()" class="main-background-color main-button color-white">
         Add First Project
       </button>
-        </div>
-
     </div>
-
-    <div *ngIf="allProjects && allProjects.length > 0" class="p-l-20 p-r-20 p-b-20 min-height parent">
-        <!-- fix part -->
-        <div class="row p-t-15 p-b-10">
-            <div class="col-xs-6">
-                <mat-form-field class="example-form-field border-input project">
-                    <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchText" />
-                    <button mat-button matSuffix mat-icon-button>
+  </div>
+  <div *ngIf="allProjects && allProjects.length > 0" class="p-l-20 p-r-20 p-b-20 min-height parent">
+    <!-- fix part -->
+    <div class="row p-t-15 p-b-10">
+      <div class="col-xs-6">
+        <mat-form-field class="example-form-field border-input project">
+          <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchText" />
+          <button mat-button matSuffix mat-icon-button>
             <mat-icon>search</mat-icon>
           </button>
-                </mat-form-field>
-            </div>
-            <div class="text-right col-xs-6">
-                <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
+        </mat-form-field>
+      </div>
+      <div class="text-right col-xs-6">
+        <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
           + Add Project
         </button>
-            </div>
-        </div>
-        <!-- end fix part -->
-        <div *ngFor="
-        let projDetails of allProjects | SearchPipe: searchText:'projectName'
-      ">
-            <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails">
-            </card-layout>
-        </div>
+      </div>
     </div>
+    <!-- end fix part -->
+    <div *ngFor="let projDetails of allProjects | SearchPipe: searchText:'projectName'">
+      <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails"> </card-layout>
+    </div>
+  </div>
 </div>
