--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -38,7 +38,7 @@
                     [matDatepicker]="dueDate"
                     formControlName="fullfilmentDate"
                     placeholde="Enter Date"
-                    (focus)="dueDate.open()"
+                    (click)="dueDate.open()"
                     [min]="minDate"
                     readonly
                   />
