--- a/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-detail/rfq-supplier-detail.component.html
@@ -16,7 +16,7 @@
                 [matDatepicker]="quoteValidTill"
                 placeholder="Quote Valid till"
                 [(ngModel)]="rfqSupplierDetailList.quoteValidTill"
-                (focus)="quoteValidTill.open()"
+                (click)="quoteValidTill.open()"
                 readonly
                 [min]="rfqSupplierDetailList.dueDate"
                 required
