--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -71,7 +71,7 @@
                   placeholder="Required Date"
                   (dateChange)="getStart(ref.value, i)"
                   [min]="minDate"
-                  (focus)="startDate.open()"
+                  (click)="startDate.open()"
                   readonly
                 />
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
