--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -21,7 +21,7 @@
               <mat-form-field class="border-input date-label">
                 <mat-label>RFQ End Date</mat-label>
                 <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span>
-                <input matInput [matDatepicker]="dueDate" formControlName="dueDate" (focus)="dueDate.open()" readonly />
+                <input matInput [matDatepicker]="dueDate" formControlName="dueDate" (click)="dueDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="dueDate"></mat-datepicker-toggle>
                 <mat-datepicker #dueDate startView="month" [startAt]="dueDate"></mat-datepicker>
               </mat-form-field>
@@ -31,7 +31,7 @@
               <mat-form-field class="border-input">
                 <mat-label>RFQ End Date*</mat-label>
                 <!-- <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span> -->
-                <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate" (focus)="endDate.open()" readonly />
+                <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate" (click)="endDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
                 <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
                 <!-- <small *ngIf="sameStartEndDate" class="error-msg"> End Date must be greater than Start Date </small> -->
