--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -98,7 +98,7 @@
 
             <!-- <mat-form-field class="mr-5 w-75">
               <input hidden matInput [matDatepicker]="startDate" formControlName="startDate" #ref
-              (dateChange)="getStart(ref.value)" (focus)="startDate.open()" readonly>
+              (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly>
               <span class="form-placeholder">{{ customDateFormat(form.controls.startDate.value) }}</span>
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate></mat-datepicker>
@@ -107,7 +107,7 @@
             <mat-form-field class="border-input">
               <mat-label>Project Start Date*</mat-label>
               <!-- <span class="form-placeholder">{{form["controls"]["startDate"].value | date: "dd-MMM-yyy" }}</span> -->
-              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref (dateChange)="getStart(ref.value)" (focus)="startDate.open()" readonly />
+              <input matInput [matDatepicker]="startDate" formControlName="startDate" #ref (dateChange)="getStart(ref.value)" (click)="startDate.open()" readonly />
 
               <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
               <mat-datepicker #startDate startView="month" [startAt]="startDate"></mat-datepicker>
@@ -125,7 +125,7 @@
                 #refEnd
                 (dateChange)="getEndDate(refEnd.value)"
                 [min]="form['controls']['startDate'].value"
-                (focus)="endDate.open()"
+                (click)="endDate.open()"
                 readonly
               />
               <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
