Mobile regex changed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -30,12 +30,11 @@
                 </mat-tab-group>
 
                 <div class="row text-align-center three-months-signup-text">
-                    <div class="col-sm-12 p-t-10">
-                        <div class="font-size20 font-bold blue-color p-5">3 MONTHS FREE TRIAL</div>
-                         <!-- <div class="font-size16 p-5">Sign Up to avail three months free trial</div> -->
-                    </div>
                      <div class="col-sm-12 p-t-5 p-b-15">
-                        <div class="font-signup">You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends</div>
+                        <div class="font-signup">
+                            You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends. <br>
+                            This is an introductory offer for the first year of your purchase only.
+                        </div>
                          <!-- <div class="font-size16 p-l-5 p-r-5"> </div> -->
                     </div>
                 </div>
