--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -82,6 +82,7 @@ color: #000000 !important;
 .font-signup{
   font-size:13px;
   font-weight:500;
+  color: #2197bb;
 }
 .three-months-signup-text{
 
