--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -39,9 +39,7 @@
           <span class="mat-cell"> {{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
           <span class="mat-cell p-l-45 m-l-20"
             >{{
-              material.GlobalMaterial.deliveredQty != null && material.GlobalMaterial.issuedQty != null
-                ? material.GlobalMaterial.deliveredQty - material.GlobalMaterial.issuedQty
-                : 0
+              material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0) : 0
             }}
             <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
