--- a/src/app/shared/dialogs/add-bom-warning/add-bom-warning.component.html
+++ b/src/app/shared/dialogs/add-bom-warning/add-bom-warning.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div mat-dialog-content class="padding-for-dialog-after-header">
-  <p class="text-center">Save Data to BOM before migrating</p>
+  <p class="text-center">Save data to BOM before migrating</p>
 </div>
 <br />
 <div class="col-xs-12 text-center">
