--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -20,6 +20,9 @@
                     <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
                     <span>Upload</span>
                   </label>
+                   <div class="text-align-center">
+                     <small  class="error-msg">{{imageFileSizeError}}</small>
+                  </div>
                 </div>
               </div>
 
@@ -199,7 +202,19 @@
                             </div> -->
 
               <div class="text-center col-md-12 mt-4">
-                <button class="btn btn-warning next-btn" [disabled]="!userInfoForm.valid">Next</button>
+                <ng-container *ngIf="imageFileSize && localImg;">
+                    <button class="btn btn-warning next-btn" [disabled]="!userInfoForm.valid">Next
+                  </button>
+                </ng-container>
+                <ng-container *ngIf="!imageFileSize && localImg">
+                    <button class="btn btn-warning next-btn" [disabled]="true">Next
+                    </button>
+                </ng-container>
+                 <ng-container *ngIf="!imageFileSize && !localImg">
+                    <button class="btn btn-warning next-btn" [disabled]="!userInfoForm.valid">Next
+                    </button>
+                </ng-container>
+
               </div>
             </div>
           </form>
