Youtube video link updated Done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/video-video/view-video.component.html
+++ b/src/app/shared/dialogs/video-video/view-video.component.html
@@ -5,6 +5,6 @@
       </button>
   </div>
    <div class="col-sm-12  padding-for-dialog-after-header text-align-center">
-      <iframe class="buildsupply-material-video" autoplay src="https://www.youtube.com/embed/kgJsXPXpx5g?autoplay=1&enablejsapi=1" alt="Failed to load video">
+      <iframe class="buildsupply-material-video" autoplay src="https://www.youtube.com/embed/CXrwPgB2guQ?autoplay=1&enablejsapi=1" alt="Failed to load video">
       </iframe>
    </div>
