--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -1,7 +1,7 @@
-<div class="dashboard mt-120 mb-4">
+<div class="dashboard app-dashboard">
     <div class="container-fluid bg-gray">
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-sm-12 col-md-9">
                 <div class="things-to-do bg-white mb-4 equal-height">
                     <!-- <h5 class="mb-3">Things to do</h5> -->
                     <div class="things-to-do__inner d-flex justify-content-between align-items-center">
@@ -187,7 +187,7 @@
                 </div> -->
             </div>
 
-            <div class="col-md-3">
+            <div class="col-sm-12 col-md-3">
                 <div class="dashboard__right">
                     <div class="project-tile cursor" [routerLink]="['/project-dashboard']">
                         <div class="project-tile__tile equal-height w-100 mb-4 stats px-3 py-3 d-flex align-items-center mr-3">
