--- a/src/app/shared/dialogs/add-project/add-project-component.html
+++ b/src/app/shared/dialogs/add-project/add-project-component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="upload-photo-btn browser-method p-t-10">
           <label class="myLabel">
-            <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
+            <input type="file" accept=".jpg,.jpeg,.png,.webp" title="" (change)="onFileSelect($event)" />
             <span>Upload</span>
           </label>
            <div class="text-align-center p-t-5 line-height-1">
