Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -21,7 +21,7 @@
 
                 <div class="browser-method">
                   <label class="myLabel">
-                    <input type="file" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
+                    <input type="file" title="" accept=".jpg,.jpeg,.png,.webp" (change)="onFileSelect($event)" />
                     <span>Upload</span>
                   </label>
                   <div class="text-align-center">
