--- a/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -11,9 +11,19 @@
                     {{ category.groupName }}
                   </mat-panel-title>
                 </div>
-                <div class="col-xs-6 p-r-65">
+                <div class="col-xs-2 p-r-30">
+                  <span class="pull-right">
+                    Unit
+                  </span>
+                </div>
+                <div class="col-xs-2">
                   <span class="pull-right">
                     Estimated Quantity
+                  </span>
+                </div>
+                <div class="col-xs-2">
+                  <span class="pull-right">
+                    Estimated Rate(₹)
                   </span>
                 </div>
               </mat-expansion-panel-header>
@@ -23,40 +33,39 @@
                     <div class="col-xs-3">
                       <span class="pull-left p-l-40 p-t-20">{{ subcategory.materialName }}</span>
                     </div>
-                    <div class="col-xs-5 p-t-10">
-                      <span class="pull-right text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
-                        <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== 0">,</span> </span>
-                        <!-- <mat-card class="mat-card-width p-l-10 p-r-10 p-t-5 p-b-5 font-size14 background-color-skyblue color-white" matTooltip="{{ trades }}">
-                        <div class="limited-character global">
-                          {{ trades }}
-                        </div>
-                      </mat-card> -->
+                    <div class="col-xs-3 p-t-10">
+                      <span class="text-semi-bold" *ngFor="let trades of subcategory.tradeList; let i = index">
+                        <span class="p-r-5">{{ trades }}<span *ngIf="subcategory.tradeList.length > 1 && i !== subcategory.tradeList.length - 1">,</span> </span>
                       </span>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-xs-2">
+                      <mat-form-field class="border-select">
+                        <mat-select formControlName="materialUnit" placeholder="Select material unit">
+                          <mat-option *ngFor="let unit of materialUnit" [value]="unit">
+                            <span>
+                              {{ unit }}
+                            </span>
+                          </mat-option>
+                        </mat-select>
+                      </mat-form-field>
+                    </div>
+                    <div class="col-xs-2">
                       <span class="pull-right">
-                        <!-- <mat-form-field class="full-border widthZero">
-                    <input matInput formControlName="estimatedQty"  placeholder="eg. 1500" />
-                    <span class="p-b-15 p-l-5">{{subcategory.materialUnit}}</span>
-                  </mat-form-field> -->
-
                         <mat-form-field class="border-input widthZero">
-                          <input
-                            matInput
-                            formControlName="estimatedQty"
-                            type="number"
-                            class="p-b-5 shortWidth"
-                            placeholder="Enter Quantity"
-                            min="0"
-                            onkeypress="return event.charCode >= 48 && event.charCode <= 57"
-                          />
+                          <input formControlName="estimatedQty" appTwoDigitDecimaNumber matInput type="text" class="p-b-5 shortWidth" placeholder="Enter Quantity" />
+                        </mat-form-field>
+                        <span class="p-l-10 p-t-25">
+                          {{ subcategory.materialUnit }}
+                        </span>
+                      </span>
+                    </div>
+                    <div class="col-xs-2 text-center">
+                      <span>
+                        <mat-form-field class="border-input widthZero">
+                          <input formControlName="estimatedRate" appTwoDigitDecimaNumber matInput type="text" class="p-b-5 shortWidth" placeholder="Enter Rate" />
                         </mat-form-field>
                       </span>
                     </div>
-                    <div class="col-xs-1 p-t-25">
-                      {{ subcategory.materialUnit }}
-                    </div>
-
                     <ng-container *ngIf="subcategory.Specs">
                       <div class="row background-color-bom-sub-sub-category p-0" *ngFor="let material of subcategory.Specs">
                         <div class="col-xs-6">
